--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,12 @@
 
 		<div class="mainText">
 			<p>
-          Description lalala lalalalalala lalalalalalalalala lalalalalala lalala
-					lalalala lalalalala lalala lalala lalala lalala
+          Simulates ordinary differential equation models both deterministically and stochastically using Runge-Kutta and Gillespie algorithms.
       </p>
-      <p>
-          lalala lalala lalala lalala
+			<p>
+				Developed as a part of <a href="tecnox.exp.dc.uba.ar">the 2017 TECNOx</a> event.
 			</p>
+
 		</div>
 
 		<div id="App" class="app" onload="init()">
@@ -39,13 +39,13 @@
 			<script src="static/js/socketHandler.js"></script>
 			<!--script src="static/js/app.js"></script-->
 
-			<p>
+			<!--p>
 				Lalala
 				<a href="" class="tooltip" target="_blank"
 					tipTxt="More lalalala.">
 					lalala</a>
 				lalalalalala
-			</p>
+			</p-->
 
 			<p>
 
